# flecs-demo

./: .gitignore  Dockerfile  README.md  build_push.sh  flecs_agent.yml
client/: Cargo.toml
client/src/: commands.rs  main.rs  test.rs
flecs_api/: Cargo.toml  README.md
flecs_api/.openapi-generator/: FILES
flecs_api/docs/: AdditionalInfo.md  App.md  AppInstallPost200Response.md  AppInstallPost400Response.md  AppInstallPost500Response.md  AppInstallPostRequest.md  AppInstances.md  AppInstancesAllOf.md  AppInstancesAllOf1.md  AppListGet200Response.md  AppListGet200ResponseAllOf.md  AppUninstallPostRequest.md  AppVersions.md  AppVersionsAllOf.md  Conffiles.md  ConffilesConffilesInner.md  DefaultApi.md  Hostname.md  InstalledApp.md  InstalledAppAllOf.md  InstanceCreatePost200Response.md  InstanceCreatePost500Response.md  InstanceCreatePostRequest.md  InstanceDeletePost200Response.md  InstanceDeletePost500Response.md  InstanceDeletePostRequest.md  InstanceDeletePostRequestAnyOf.md  InstanceDetailsPost200Response.md  InstanceId.md  InstanceName.md  InstanceStartPost500Response.md  IpAddress.md  LicenseKey.md  Mounts.md  MountsMountsInner.md  Ports.md  PortsPortsInner.md  Response500.md  SystemPingGet200Response.md  Version.md  (+2 more)
flecs_api/src/apis/: configuration.rs  default_api.rs
flecs_api/src/models/: _app_install_post_200_response.rs  _app_install_post_400_response.rs  _app_install_post_500_response.rs  _app_install_post_request.rs  _app_list_get_200_response.rs  _app_list_get_200_response_all_of.rs  _app_uninstall_post_request.rs  _instance_create_post_request.rs  (+34 more)
